--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,3 +1,10 @@
 .main {
     /* height: 73vh; */
 }
+.search-box {
+    /* border: 1px solid red; */
+    margin: 0px auto;
+    max-width: 400px;
+    display: flex;
+    justify-content: space-around;
+}
